# bevy_scene_sdf

./: .gitignore  Cargo.toml  README.md  plan.txt
assets/shader/: addressing.wgsl  bind.wgsl  coarse.wgsl  consts.wgsl  debug.wgsl  fine.wgsl  fine_blend.wgsl  intersect.wgsl  jfa simple.wgsl  jfa stitch.wgsl  output.wgsl  types.wgsl
assets/shader/old/: dist.wgsl  fine simple.wgsl  fine tri-based.wgsl  jfa collect tri-based.wgsl  jfa simple tri-based.wgsl  output tri_based.wgsl
examples/: simple.rs
src/: debug.rs  lib.rs  render.rs
