[package]
name = "bevy_scene_sdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git="https://github.com/robtfm/bevy", branch="scene_sdf", features=["jpeg"] }
wgpu = "*" # whatever bevy uses